Add login functionality to index.html
Added a login box for user authentication.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 <body>
 
+  <div id="login-box" style="margin-bottom:20px;">
+    <h3>로그인</h3>
+    <input id="login-id" placeholder="아이디 입력" />
+    <input id="login-pw" type="password" placeholder="비밀번호 입력" />
+    <button onclick="login()">로그인</button>
+    <span id="login-status"></span>
+  </div>
+
+
   <h1>📢 공지 요약 AI Assistant  -  Made by YoonOh Kwon</h1>
 
   <div class="main">
@@ -26,3 +35,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
