Hide main section on initial load
Updated the main section to be hidden initially.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   <h1>📢 공지 요약 AI Assistant - Made by YoonOh Kwon</h1>
 
-  <div class="main" id="main-section">
-    <div class="left" id="notice-list"></div>
-    <div class="right" id="notice-content">공지 내용을 선택해주세요.</div>
+  <div class="main" id="main-section" style="display:none;">
+      <div class="left" id="notice-list"></div>
+      <div class="right" id="notice-content">공지 내용을 선택해주세요.</div>
   </div>
 
   <textarea id="user-command"
@@ -40,3 +40,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
