--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>공지 요약 AI</title>
   <link rel="stylesheet" href="style.css">
+  <button id="download-button" onclick="downloadUploader()">📥 업로드 도구 다운로드</button>
+
 </head>
 
 <body>
@@ -33,4 +35,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
