--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="right" id="notice-content">공지 내용을 선택해주세요.</div>
     </div>
 
-    <textarea id="user-command" placeholder="예: 요약해줘, 과제만 정리해줘, 중요한 내용만 말해줘"></textarea>
+    <textarea id="user-command" placeholder=""></textarea>
     <button id="ai-button" onclick="askAI()">AI 분석 요청하기</button>
     <div id="loading-spinner"></div>
 
@@ -48,6 +48,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
